# kgat-xrec

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
src/: main.py
src/datasets/: README.md
src/models/: base.py  bprmf.py  bprmf_torch.py  kgat.py  kgat_torch.py
src/scripts/: search_path.py
src/utils/: helper.py  metrics.py  parser.py  sampler.py  types.py
src/utils/loaders/: base.py  bprmf.py  kgat.py
