[tool.poetry]
name = "kgat-xrec"
version = "0.1.0"
description = ""
authors = ["jchanxtarov <ryotaro.shimizu@zozo.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.21.1"
mypy = "^0.910"
pandas = "^1.3.1"
dgl = "^0.6.1"
torch = "^1.9.0"
sklearn = "^0.0"
dgl-cu110 = "^0.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
